--- a/client/src/pages/operation/op.scss
+++ b/client/src/pages/operation/op.scss
@@ -375,7 +375,7 @@ color: rgb(61, 104, 244);
     width: 75%;
     padding: 10px;
     gap: 12px;
-    height: calc(100vh - 180px);
+    height:440px !important;
   }
 
   .op-f {
