--- a/client/src/pages/Cli/cli.scss
+++ b/client/src/pages/Cli/cli.scss
@@ -684,7 +684,7 @@
 
 @media screen and (max-width: 768px) {
   .dashboard-main-box-client {
-    margin-left: 90px;
+    margin-left: 70px;
  width:  460px !important;
     padding: 8px;
       padding-bottom: 20px;
@@ -720,12 +720,12 @@
 }
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 480px) {
   .dashboard-main-box-client {
-    margin-left: 90px;
+    margin-left: 60px;
  width:  440px !important;
     padding: 6px;
-    margin-bottom: 40px;
+    margin-bottom: 20px !important;
   }
 
   .client-list-section, .active-clients-section {
