--- a/client/src/pages/operation/op.scss
+++ b/client/src/pages/operation/op.scss
@@ -826,3 +826,130 @@ select.op-inp {
     }
   }
 }
+
+
+.new-opera{
+width: 159px;
+height: 42px;
+border-radius: 4px;
+gap: 10px;
+padding-top: 8px;
+padding-right: 12px;
+padding-bottom: 8px;
+padding-left: 12px;
+border: none;
+background-color: rgba(255, 102, 0, 1);
+;
+color: white;
+
+
+}
+
+
+.doc-wrappersa {
+  width: 100%;
+  max-width: 100%;
+  padding: 20px;
+  background: #ffffff;
+  box-sizing: border-box;
+}
+
+.doc-headersa{
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-bottom: 12px;
+}
+
+
+.table-containerssa {
+  width: 100%;
+  overflow: hidden;
+}
+
+.table-rowsa {
+  display: flex;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+  height: 72px;
+  align-items: center;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  padding: 0 20px; /* daha geniş */
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.table-headsa {
+  font-weight: bold;
+  color: gray;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+
+  // Remove box-shadow for header row
+  box-shadow: none;
+  background-color: transparent; // Optional: if you want it to look different from regular rows
+}
+.table-bodysa {
+  max-height: 936px; /* 13 satır × 72px */
+  overflow-y: auto;
+  padding-right: 6px;
+}
+
+/* Sütunları daha da genişletiyoruz */
+.colaa.type {
+  flex: 3;
+  min-width:200px;
+}
+
+.colaa.name {
+  flex: 4;
+  min-width: 300px;
+}
+
+.colaa.date {
+  flex: 2;
+  min-width: 260px;
+}
+
+
+.doc-paa{
+font-weight: bold;
+color: black;
+font-size: 20px;
+
+
+}
+
+.jus{
+    padding-top: 10px;
+}
+
+
+.flex-last{
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+}.gr.active {
+  background-color: black;
+  color: white;
+
+  img {
+    filter: brightness(0) invert(1);
+  }
+}
+.disabled-section {
+  opacity: 0.5;
+}
+
+
+.colaa.type img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain; 
+}
