--- a/client/src/pages/operation/op.scss
+++ b/client/src/pages/operation/op.scss
@@ -896,7 +896,7 @@ color: white;
   background-color: transparent; // Optional: if you want it to look different from regular rows
 }
 .table-bodysa {
-  max-height: 936px; /* 13 satır × 72px */
+  max-height: 706px; 
   overflow-y: auto;
   padding-right: 6px;
 }
