--- a/client/src/pages/events/event.scss
+++ b/client/src/pages/events/event.scss
@@ -206,13 +206,17 @@ box-shadow: 0px 1px 4.8px 0px rgba(0, 0, 0, 0.25);
         font-size: 12px;
 
         &.pending {
-          background: #fff7e6;
-          color: #d97706;
+          background: rgba(255, 102, 0, 0.15);
+          color: #ff4d00;
+          border: none;
+          border-radius: 15px;
         }
 
         &.done {
-          background: #e6f7ec;
+      background: rgba(16, 185, 129, 0.3);
+   border: none;
           color: #059669;
+                   border-radius: 15px;
         }
       }
 
@@ -294,4 +298,6 @@ box-shadow: 0px 1px 4.8px 0px rgba(0, 0, 0, 0.25);
     background: #f0f0f0;
   }
 }
+
+
 
