--- a/client/src/pages/operation/OperationDetail.scss
+++ b/client/src/pages/operation/OperationDetail.scss
@@ -145,7 +145,7 @@
 
   .operation-main-content .info-section {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 5px;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
     border: 1px solid #e8eaf6;
@@ -173,6 +173,7 @@
     border-radius: 4px;
     text-align: center;
     border: 1px solid #eee;
+    width: 130px;
   }
 
   .operation-main-content .info-section .info-grid .info-item .value {
