--- a/client/src/pages/operation/op.scss
+++ b/client/src/pages/operation/op.scss
@@ -875,7 +875,7 @@ color: white;
   align-items: center;
   border-radius: 6px;
   margin-bottom: 10px;
-  padding: 0 20px; /* daha geniş */
+  padding: 0 5px; /* daha geniş */
   width: 100%;
   box-sizing: border-box;
   font-size: 16px;
@@ -901,14 +901,13 @@ color: white;
   padding-right: 6px;
 }
 
-/* Sütunları daha da genişletiyoruz */
 .colaa.type {
-  flex: 3;
-  min-width:200px;
+  flex: 2;
+  min-width:5px;
 }
 
 .colaa.name {
-  flex: 4;
+  flex: 2;
   min-width: 300px;
 }
 
@@ -952,4 +951,50 @@ font-size: 20px;
   width: 20px;
   height: 20px;
   object-fit: contain; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.table-rowsa {
+  display: flex;
+  gap: 55px; /* Daha küçük aralık */
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
+
+.colaa {
+  padding: 0 60px;
+  margin: 0;
+
+  flex-shrink: 1;
+  white-space: nowrap; /* Satır kaymasını önler */
+
+}
+
+.colaa.type {
+  flex: 0 0 90px; /* Sabit 24px genişlik */
+}
+
+.colaa.name {
+  flex: 1 1 auto; /* Esnek genişlik */
+  min-width: 200px;
+}
+
+.colaa.date {
+  flex: 0 0 120px; /* Sabit genişlik */
 }
