--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -85,7 +85,7 @@ background: linear-gradient(180deg, #102b54 0%, #08182C 100%);
   border-radius: 90px;
   font-family: 'Satoshi', sans-serif;
   font-weight: lighter;
-  font-size: 24px;
+
   line-height: 140%;
   letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 0.3);
@@ -1326,7 +1326,7 @@ gap: 10px;
 }
 
 // Tablet Responsive (1024px)
-@media screen and (max-width: 1391px) {
+@media screen and (max-width: 1200px) {
   .dashboard-bg {
     display: flex;
   }
@@ -1390,6 +1390,7 @@ gap: 10px;
   .sidebar-toggle {
     display: none;
   }
+  
 }
 
 // Mobile Responsive (768px)
@@ -1592,4 +1593,72 @@ body {
     z-index: 1000;
     overflow-y: auto; /* Küçük mobile'de scroll */
   }
+  .search-icon{
+    display: none;}
+  }
+
+@media (max-width: 1024px) {
+  header {
+    flex-direction: row !important; /* Eğer sütuna geçiyorsa düzeltir */
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    display: flex !important;
+  }
+
+  .menu-button {
+    display: none; /* Eğer mobil menü aç/kapa butonu çıkıyorsa */
+  }
 }
+
+.dashboard-header-rights{
+  display: flex;
+}
+
+.dashboard-headers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  min-width: 0;
+  // flex: 1;
+
+
+}
+
+.menu-item{
+    font-size: 20px;
+}.direc {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.lorem-card {
+  background: white;
+  border-radius: 12px;
+  padding: 16px;
+  max-width: 100%;
+  height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
